Fix aligned images width in FF/IE

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -755,6 +755,9 @@ div.widget .extendednavigation ul.align-right {
    =============================== */
 
 .widget.image {
+    a {
+        max-width: 100%;
+    }
     .image-title, .image-description {
     color: @font-swatch5-color;
     }
